tests/ui/nll/user-annotations/ascribed-type-wf.stderr
error: lifetime may not live long enough
  --> $DIR/ascribed-type-wf.rs:13:5
   |
LL | fn extend<'a>() {
   |           -- lifetime `'a` defined here
LL |     None::<<&'a () as Trait>::Ty>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ requires that `'a` must outlive `'static`

error: aborting due to 1 previous error

